# djsp

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
djsp/: cli.py  project_builder.py
djsp/files/: .secrets.yaml  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.yaml
djsp/files/proj/: asgi.py  settings.py  urls.py  wsgi.py
djsp/files/proj/core/: apps.py  views.py
djsp/files/proj/core/templates/core/: base.html  home.html
