[tool.poetry]
name = "djsp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
ipdb = "^0.13.9"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
